RESOLVED FIXED16479
text selection does not always begin at mouse down point
https://bugs.webkit.org/show_bug.cgi?id=16479
Summary text selection does not always begin at mouse down point
Tony Chang
Reported 2007-12-17 13:29:00 PST
Sometimes when I try to select text in Safari on Windows, the selection starts a few characters after I start dragging my mouse. This looks like it's because EventHandler::dragState().m_dragSrc does not get cleared between mouse downs. In WebCore/page/mac/EventHandlerMac.mm, this gets nulled out in EventHandler::mouseDown. Since it seems like this value needs to be reset on all platforms, maybe it should be moved into EventHandler::handleMousePressEvent? Test case coming up...
Attachments
test case (3.81 KB, text/html)
2007-12-17 13:37 PST, Tony Chang
no flags
clear m_dragSrc on all platforms (10.00 KB, patch)
2007-12-17 17:49 PST, Tony Chang
no flags
use dumpAsText (8.21 KB, patch)
2007-12-19 16:27 PST, Tony Chang
darin: review+
Tony Chang
Comment 1 2007-12-17 13:37:39 PST
Created attachment 17968 [details] test case In the above test case, click on the link then try to select some text. Sometimes the text selection doesn't start until we're a few lines/characters away from the mouse down.
Tony Chang
Comment 2 2007-12-17 17:49:26 PST
Created attachment 17970 [details] clear m_dragSrc on all platforms
David Kilzer (:ddkilzer)
Comment 3 2007-12-18 05:07:39 PST
(In reply to comment #2) > Created an attachment (id=17970) [edit] > clear m_dragSrc on all platforms Please set review? flag on patches to make sure they're reviewed!
Alexey Proskuryakov
Comment 4 2007-12-18 13:00:45 PST
The test needs a layoutTestController.dumpAsText() call - otherwise, it will generate platform-dependent pixel results when run-webkit-tests is run with a --pixel option.
Tony Chang
Comment 5 2007-12-19 16:27:05 PST
Created attachment 18000 [details] use dumpAsText I updated the test to use dumpAsText instead. We need to ensure that something is selected.
Alp Toker
Comment 6 2007-12-19 16:29:58 PST
Fix looks good for the GTK+ port.
Darin Adler
Comment 7 2007-12-20 09:32:08 PST
Comment on attachment 18000 [details] use dumpAsText r=me
Alp Toker
Comment 8 2007-12-20 10:09:56 PST
Landed in r28888.
Note You need to log in before you can comment on or make changes to this bug.