2007-12-17  Tony Chang  <idealisms@gmail.com>

Reviewed by Darin.

        - Fix for http://bugs.webkit.org/show_bug.cgi?id=16479
          text selection does not always begin at mouse down point
          Reset the m_dragSrc object on mouse down on all platforms.

        Test: fast/text/reset-drag-on-mouse-down.html


Canonical link: https://commits.webkit.org/22743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28888 268f45cc-cd09-0410-ab3c-d52691b4dbfc